Replace frame allocator with xv6's

--- a/doc/7.2.Physical_Memory_Management.md
+++ b/doc/7.2.Physical_Memory_Management.md
@@ -28,7 +28,7 @@ Note also the acpi region is reclaimable, i.e. it can be considered free, as
 long as we don't need the ACPI tables stored there.
 
 But for simplicity, we'll only use one memory region: the *extended memory*
-starting at 1MB (0x100000).
+starting at 1 MB (0x100000).
 
 Our kernel is initially loaded to memory address 0x1000, then copied to high
 memory 0x100000. The reasons we do that are: 1. easier paging mapping as the
@@ -42,7 +42,7 @@ in memory: 0x1000+(512\*40)=0x6000, 0x1000+(512\*60)=0x8800. So if our kernel
 grows beyond 40 sectors, we'll just have to copy it chunk by chunk.
 
 The kernel will also need to know its size so it knows what portions of memory
-it can use, for exaple to store its data. We could get the size of our kernel
+it can use, for example to store its data. We could get the size of our kernel
 from a bootloader like GRUB. Note also that, GRUB being able to load ELF
 binaries, it projects them to the address set by the linker, which typically is
 to extended memory (> 1 MiB) [^sos] [^hux-kernel]. But what we do instead is
@@ -69,33 +69,33 @@ bitmap or the page descriptor array, after the end of the loaded kernel.
 
 We'll also follow that design and our memory will look like this:
 
-| Addr            | Stuff                                                                             |
-|-----------------|-----------------------------------------------------------------------------------|
-|                 |                                                                                   |
-| 0x1000          | 4. `KERNEL_OFFSET1`, stage2 buffer start to copy kernel to high memory            |
-|                 |                                                                                   |
-| 0x5000 (512*40) | 4. stage2 buffer end                                                              |
-|                 |                                                                                   |
-| 0x7c00          | 1. bootloader stage1, can be overriden by kernel. Stack end before protected mode |
-|                 |                                                                                   |
-| 0x7e00          | 2. bootloader stage2, can be overriden by kernel                                  |
-|                 |                                                                                   |
-| 0x81ff          | 2. bootloader stage2 end                                                          |
-|                 |                                                                                   |
-| 0xA000          | 3. `MEM_MAP` memory map                                                           |
-|                 |                                                                                   |
-| 0x90000         | 5. Stack end after protected mode                                                 |
-|                 |                                                                                   |
-| 0x9f000         | end of first memory region                                                        |
-|                 |                                                                                   |
-| 0x100000        | 6. `KERNEL_OFFSET2`, `__kstart` kernel start                                      |
-|                 |                                                                                   |
-| ???             | 6. `__kend` kernel end                                                            |
-|                 |                                                                                   |
-| ??? (0x105000)  | 6. `kheap_curr` start of kernel heap                                              |
-|                 |                                                                                   |
-| 0x800000        | 6. `KHEAP_MAX_ADDR`                                                               |
-|                 |                                                                                   |
+| Addr            | Stuff                                                                              |
+|-----------------|------------------------------------------------------------------------------------|
+|                 |                                                                                    |
+| 0x1000          | 4. `KERNEL_OFFSET1`, stage2 buffer start to copy kernel to high memory             |
+|                 |                                                                                    |
+| 0x5000 (512*40) | 4. stage2 buffer end                                                               |
+|                 |                                                                                    |
+| 0x7c00          | 1. bootloader stage1, can be overridden by kernel. Stack end before protected mode |
+|                 |                                                                                    |
+| 0x7e00          | 2. bootloader stage2, can be overridden by kernel                                  |
+|                 |                                                                                    |
+| 0x81ff          | 2. bootloader stage2 end                                                           |
+|                 |                                                                                    |
+| 0xA000          | 3. `MEM_MAP` memory map                                                            |
+|                 |                                                                                    |
+| 0x90000         | 5. Stack end after protected mode                                                  |
+|                 |                                                                                    |
+| 0x9f000         | end of first memory region                                                         |
+|                 |                                                                                    |
+| 0x100000        | 6. `KERNEL_OFFSET2`, `__kstart` kernel start                                       |
+|                 |                                                                                    |
+| ???             | 6. `__kend` kernel end                                                             |
+|                 |                                                                                    |
+| ??? (0x105000)  | 6. `kheap_curr` start of kernel heap                                               |
+|                 |                                                                                    |
+| 0x800000        | 6. `KHEAP_MAX_ADDR`                                                                |
+|                 |                                                                                    |
 
 Again, it is critical to understand the physical memory layout, during and
 after the bootloader process, as it's easy to make mistakes in design choices
@@ -142,6 +142,8 @@ Other projects have different approaches for frame allocation:
 
 ## Slab allocation
 
+"Slab" as "slice" (note for non-native english speakers).
+
 Similar to object pools but applied to memory:
 
 > When the allocator is asked to free the object's memory, it just adds the
@@ -152,7 +154,7 @@ Similar to object pools but applied to memory:
 
 Can be used in other contexts like inodes.
 
-*Segregated list* is the parent concept. Slab allocateor is a specialization in
+*Segregated list* is the parent concept. Slab allocator is a specialization in
 that is keeps free objects on the lists in a pre-initialized state.
 
 
@@ -160,7 +162,7 @@ that is keeps free objects on the lists in a pre-initialized state.
 
 - [^sos]: [sos](sos.enix.org/)
 - [^hux-kernel]: [hux-kernel](https://github.com/josehu07/hux-kernel)
-- [^nullprog]: We're very greatful to Chris Wellons for his amazing blog post
+- [^nullprog]: We're very grateful to Chris Wellons for his amazing blog post
   on [How to build DOS COM files with
   GCC](https://nullprogram.com/blog/2014/12/09/) which made it explicit that we
   need to use the *address* of the linker variable!
