--- a/doc/7.3.Virtual_Memory.md
+++ b/doc/7.3.Virtual_Memory.md
@@ -9,7 +9,8 @@ we implement processes. Let's dive in.
 > Many platforms, including x86, use a memory management unit (MMU) to handle
 > translation between the virtual and physical address spaces. [^osdev]
 
-**TLB** (Translation Lookaside Buffer) caches page lookups.
+The MMU sits between the CPU and the memory. It includes a **TLB** (Translation
+Lookaside Buffer) which caches page lookups.
 
 > For simplicity, our paging system will only support **pages** of size 4KiB,
 > and the physical memory is divided into **frames** of size
@@ -19,10 +20,16 @@ On x86 the translation from virtual to physical addresses is done via:
 
 - a special register, CR3 aka Page Directory Base Register (PDBR), which stores
   the physical address of the Page Directory
-- a special data structure, the Page Directory, a table of 1024 32-bit
+- a special data structure, the **Page Directory**, a table of 1024 32-bit
   entries (for 4K pages) pointing to Page Tables
-- other very similar data structure, Page Tables, tables of 1024 32-bit
-  entries (for 4K pages) poimting to actual physical frames.
+- other very similar data structures, **Page Tables**, tables of 1024 32-bit
+  entries (for 4K pages) pointing to actual physical frames.
+
+Just clarifying sizes:
+
+- page directory: 4 KB (1024 entries)
+- each page table: 4 KB (also 1024 entries)
+- maximum total: 1024*1024 PTEs + 1 PDE  = 4 MB + 4 KB.
 
 2 important notes on the translation:
 
@@ -32,10 +39,10 @@ On x86 the translation from virtual to physical addresses is done via:
    ```
 2. Page Directory and Page Table *entries* are 32-bit and can be considered as
    physical addresses to Page Tables or frames respectively, except that only
-   the 20 MSBs are used (as LSBs are used as flags). Meaning that addresses
-   must be (4K) page-aligned.
+   the 20 most significant bits are used (as least significant bits are used as
+   flags). Meaning that addresses must be (4K) page-aligned.
 
-Note how easy we can change the whole memory context! For example for different
+Note how easily can change the whole memory context! For example for different
 processes. That said when modifying translation tables, we need to remove
 obsolete entries from the TLB. This can be done by either:
 
@@ -46,14 +53,14 @@ obsolete entries from the TLB. This can be done by either:
 
 Paging is actually enabled by setting bit 31 of CR0. As soon as paging is
 enabled, all addresses (used in code thus by the CPU) become virtual, and all
-of our memory refrences go through the MMU first!
+of our memory references go through the MMU first!
 
 > Our goal after setting up paging is to have the kernel’s virtual address
 > space **identity-mapped** to the beginning of the physical memory and reserve
 > some fixed amount of memory for the kernel heap. The rest of the physical
 > memory will be free frames for mapping user process pages. [^hux-kernel]
 
-> Identity Mapping is nothing more then mapping a virtual address to the same
+> Identity Mapping is nothing more than mapping a virtual address to the same
 > physical address. For example, virtual address 0x100000 is mapped to physical
 > address 0x100000. Yep--Thats all there is to it. The only real time this is
 > required is when first setting up paging. It helps insure the memory
@@ -66,7 +73,7 @@ Identity-mapping the kernel is convenient as we enable pagination: the physical
 addresses before are mapped to linear addresses afterwards.
 
 Identity-mapping the kernel makes address translation for the kernel heap much
-faster [???Really???Why]
+faster [FIXME Really? Why?]
 
 Quick question: if physical address space is 2^32 = 4 GiB, and paging deals
 with a virtual space of 1024 (page directory entries) * 1024 (page table
@@ -75,7 +82,67 @@ provide a wider virtual address space**? Well for one *each process* can
 virtually access 4 GiB. Also the address space can be extended to disk pages,
 aka **swapping**.
 
+Hobby OSes, including linux-0.01 and xv6, map all physical memory for
+simplicity. Xv6 is a bit more precise as it maps more specific chunks from
+lower memory (I/O and kernel spaces). Xv6 also [arbitrarily limits the physical
+memory](https://stackoverflow.com/a/29892921) (`PHYSTOP`) to 224MB. And yes,
+the dot-bochsrc provided with xv6 is inconsistent because its specifies the
+a physical memory of 32MB (the default).
+
+### Paging schemes
+
+More specifically, for our kernel to access physical memory after enabling
+paging, it needs to access page table frames. We thus need to map some virtual
+pages to them. The simplest solution is to identity map all page tables.
+
+But, as outlined on OSdev[^osdev-paging], on their forum, or in blog_os
+implementation discussions[^blogos-discuss], there are multiple approaches to
+how much physical memory or what parts of it should be mapped:
+
+- map the complete physical memory.
+- only map page table frames, i.e. the pages/frames which will enable the
+  kernel to access physical memory.
+
+There is no definitive answer. Mapping only page tables allows for more
+flexibility at the cost of complexity[^osdev-paging]. When considering
+performance, mapping all memory probably loses, since it takes up more space to
+store all page tables, and time to initialize. For example, if the memory size
+is huge, as on x86_64, there might be little benefit avoiding mapping all
+physical memory since we can still use plenty other space for other
+purposes[^blogos-discuss].
+
+That is for the *what*. For the *how*, we can decide to either:
+
+- identity map: virtual addresses are translated to the same value as the
+  corresponding physical addresses.
+- map at a fixed offset: virtual addresses start at a fixed value which points
+  to a lower physical address, like 0x0. This is what higher half kernel
+  use. More on this later.
+
+We can theoretically combine approaches. See [blog_os post about paging
+implementation](https://os.phil-opp.com/paging-implementation/) for a more
+detailed explanation of each approach.
+
+Note paging (memory mapping) and physical memory management (frame allocation)
+are two orthogonal concepts. One enables the kernel to access physical memory,
+the other deals with tracking the usage of the physical memory. For example,
+hux-kernel identity [maps all physical
+memory](https://github.com/josehu07/hux-kernel/blob/d9e210f3f90b030dc2cf2df6a19484c78c50fed1/src/memory/paging.c#L435)
+and creates multiple allocator spaces.
+[Xv6](https://github.com/mit-pdos/xv6-public/blob/eeb7b415dbcb12cc362d0783e41c3d1f44066b17/vm.c#L69)
+maps all physical memory to a fixed offset and creates a single frame allocator
+from the end of the kernel to the end of the physical memory.
+
+## Implementation
+
+All this is just for reference as we will just focus on enabling paging for
+now: we will follow hux-kernel and identity map all memory.
+
+
+
 ## Higher half kernel
+
+FIXME will move to its own chapter.
 
 What are higher half kernels?
 
@@ -93,14 +160,23 @@ What are higher half kernels?
 Why higher half kernels?
 
 > We can very well run our kernel at some lower virtual address. One reason has
-> to do with v86 tasks. If you want to support v86 tasks, v86 tasks can only
-> run in user mode and within the real mode address limits (0xffff:0xffff), or
-> about 1MB+64k linear address. It is also typical to run user mode programs in
-> the first 2GB (or 3GB on some OSs) as software typically never has a need to
+> to do with v86 tasks [form a "virtual machine" with which to execute an 8086
+> program]. If you want to support v86 tasks, v86 tasks can only run in user
+> mode and within the real mode address limits (0xffff:0xffff), or about
+> 1MB+64k linear address. It is also typical to run user mode programs in the
+> first 2GB (or 3GB on some OSs) as software typically never has a need to
 > access high memory locations. [^brokenthorn]
 
-This is just for reference as we won't be using this for now. All we want to do
-for now is enabling paging. To setup a higher half kernel, see:
+Another good reason is to avoid collisions: user mode processes are linked by
+default to be loaded into the memory position 0x00000000. But But if the kernel
+is mapped onto there already, user processes need to be linked with a linker
+script to load to a different starting address, which is a very cumbersome
+solution for the users of the operating system. [^littleos]
+
+This is [what hux-kernel
+does](https://github.com/josehu07/hux-kernel/blob/d9e210f3f90b030dc2cf2df6a19484c78c50fed1/Makefile#L39).
+
+To setup a higher half kernel, see:
 
 - https://wiki.osdev.org/Higher_Half_x86_Bare_Bones
 - https://github.com/dreamos82/Osdev-Notes/blob/master/HigherHalf.md
@@ -110,8 +186,7 @@ for now is enabling paging. To setup a higher half kernel, see:
 
 - [^sos]: [sos](sos.enix.org/)
 - [^hux-kernel]: [hux-kernel](https://github.com/josehu07/hux-kernel)
-- [^nullprog]: We're very greatful to Chris Wellons for his amazing blog post
-  on [How to build DOS COM files with
-  GCC](https://nullprogram.com/blog/2014/12/09/) which made it explicit that we
-  need to use the *address* of the linker variable!
 - [^brokenthorn]: [brokenthorn](http://www.brokenthorn.com/Resources/OSDev18.html)
+- [^littleos]: [littleos](https://littleosbook.github.io/#reasons-to-not-identity-map-the-kernel)
+- [^osdev-paging]: [OSDev](https://wiki.osdev.org/Brendan%27s_Memory_Management_Guide#Virtual_Memory_Management)
+- [^blogos-discuss]: [blogos-discuss](https://github.com/phil-opp/blog_os/issues/545)
