--- a/doc/7.4.Heap.Allocator.md
+++ b/doc/7.4.Heap.Allocator.md
@@ -1,27 +1,87 @@
 # 7.4 Heap Allocator
 
-FIXME Hux got this wrong: OSTEP chap 17 *Free-Space Management* really is about
-
-> a user-level memory-allocation library (as in malloc() and free()) and in an
-> OS managing physical memory when using segmentation to implement virtual
-> memory.
-
-TODO adapt xv6 kalloc() and keep kheap aside for later umalloc.
-
 To complete our memory management, we need a proper heap allocator, also
 capable of freeing, that will thus provide `kalloc()` and `kfree()` to other
-parts of the kernel, for example for filesystem inodes.
+parts of the kernel, for example for page tables, process user memory, kernel
+stacks.
 
 Our current allocator (`kalloc_temp()`) is only useful during the boot process
 to allocate long-lived kernel structures. Also the kernel allocator is not to
 be confused with the frame allocator (`frame_alloc()`), which only tracks
 allocated frames.
 
-For the implementation, we'll follow Hux [^hux-kernel] and use a linked list
-for free blocks, aka **free list**. The question of where to store that list
+Typical implementations of heap allocators include a bitmaps or linked
+lists. We'll follow Hux [^hux-kernel] and xv6 [^xv6] and use a linked list for
+free blocks, aka **free list**.
+
+## The Hux implementation
+
+While super instructive, Hux's approach is a bit be misleading since it:
+
+1. starts by implementing a basic kernel heap allocator together with a frame
+   allocator [FIXME isn't this the same thing???],
+2. then introduces a more sophisticated variable-size allocator in [Heap Memory
+   Allocator](https://github.com/josehu07/hux-kernel/wiki/11.-Heap-Memory-Allocator#main-references-of-this-chapter)
+3. finally introduces yet another allocator for [fixed-size
+   allocation](https://github.com/josehu07/hux-kernel/wiki/12.-Aligned-SLAB-Allocators),
+   aka *Aligned Slab Allocators*.
+
+The intent may have been educational and maybe in practice the slab allocator
+implementation should replace the basic one?
+
+The reference to OSTEP chapter 17 *Free-Space Management* in Hux's *Heap Memory
+Allocator* chapter is misleading because the OSTEP chapter really is about
+variable-size allocation:
+
+> Where free-space management becomes more difficult (and interesting) is when
+> the free space you are managing consists of variable-sized units; this arises
+> a user-level memory-allocation library (as in malloc() and free()) and in an
+> OS managing physical memory when using segmentation to implement virtual
+> memory. [^ostep]
+
+The variable-size allocator is only used in the file system. The fixed-size
+allocator is the one actually used in paging and process management (look for
+salloc_page()).
+
+In summary, hux-kernel uses multiple physical allocators, with different memory
+spaces, either at different time or for different purposes.
+
+## The xv6 allocator
+
+Xv6 has a single allocator implementation for its kernel physical memory (see
+`kalloc.c`), albeit with 2 variants, as the kernel heap is also initialized in
+2 steps. `kinit1()` initializes 4 MB needed for paging (page directory and
+tables). `kinit2()` is used after paging to initialize the rest of the physical
+memory. Another reason for having two calls is that locking is not available in the
+beginning and until all processors are started.
+
+The xv6 book further explains in the chapter *Physical memory allocation*, that
+even for fixed-sized blocks, the question of where to store the free list
 arises. For maximum flexibility, as the number of nodes may not be fixed, OSes
-often chose to embed the list in the blocks themselves: each block contains an
-additional header with metadata and the link. Example:
+often chose to embed the list in the blocks themselves:
+
+> [xv6] keeps track of which pages are free by threading a linked list through
+> the pages themselves. [^xv6]
+
+Initialization of the list consists of *freeing* the memory range,
+i.e. *adding* pages to the list. Each free block starts with a header:
+
+```C
+struct run {
+  struct run *next; // points to the next free block
+};
+```
+
+Note allocated blocks don't include the header: kalloc() returns a pointer to
+the beginning of the page!
+
+Interestingly, the memory is not allocated in ascending order. The way the
+linked list is implemented and the way we create the freelist (by *freeing*
+address ranges), initially, the list points at and starts with the highest
+numbered free frame. The `next` frame actually points to the previous one.
+
+For a variable-sized allocator (like `malloc()`), each block contains an
+additional `size` field in its header. Example:
 
 ```C
 typedef struct __node_t {
@@ -30,43 +90,33 @@ typedef struct __node_t {
 } node_t;
 ```
 
+And yes, in this case, the allocator must account for the header size during
+allocation.
+
 Some implementations like sos [^sos] keep track of allocated blocks as well.
+Linux-0.01 has a rudimentary allocator (`mm/memory.c`, an `unsigned short`
+array) only for paging pages.
 
-And yes we must account for the header size during allocation.
 
-----------
+## Implementation
 
-Hux uses yet another allocator for pages and reserves the top half (4MiB) of
-the kernel heap for it:
+Let's use xv6 approach and implementation. We will initialize the allocator
+early to allow for paging and complete the process later. We thus have to
+revisit our previous approach and replace our previous frame allocator
+implementations (`kheap_curr` and the bitmap frame allocator).
 
-> It is simpler and more efficient to have a dedicated allocator just for
-> giving out page-sized & page-aligned memory chunks (*slab nodes*), one at a
-> time.
-
-FIXME why does Hux have `frame_bitmap` and `slab_alloc`? Is it because frame
-allocation only being needed for paging, we need an additional
-kernel-"internal" allocator?
-
-## Splitting & Coalescing
-
-For the algorithm and implementation, the OSTEP book makes a distinction
-between the *mechanisms* (how the list is managed) from *policies* (which
-free node to pick up next). For the policy:
-
-> We will adopt the *Next-Fit* allocation policy. See the relative sections in
-> the linked OSTEP chapter for how it works and how it compares to
-> *First-Fit*. Basically, we maintain a `last_search_node` pointer which points
-> to where the last request was served. As a new request comes, we start
-> traversing the free-list from that node, until we see a node that is large
-> enough for the request. [^hux-kernel]
-
-For the mechanisms, there are 2:
-
-- *Splitting*: when allocating, we may split a chosen node
-- *Coalescing*: when freeing, merge the chunk with its neighbors.
+Related to the previous topic of the relation (or confusion) between page
+mapping and heap allocation, note that the page mapping itself does allocate
+frames for its own use: the page tables. This is not to be confused by the
+creation of the freelist by the heap allocator. I.e. `kinit()` *creates*
+allocatable space, while `mappages()` *consumes* that space for the page
+tables.
 
 
 ## References
 
 - [^hux-kernel]: [hux-kernel](https://github.com/josehu07/hux-kernel.wiki/blob/master/11.-Heap-Memory-Allocator.md)
+- [^xv6]: [xv6](https://github.com/mit-pdos/xv6-public)
+- [^ostep]: [OSTEP](https://pages.cs.wisc.edu/~remzi/OSTEP/vm-freespace.pdf)
 - [^sos]: [sos](sos.enix.org/)
+- [^linux]: [linux-0.01](https://mirrors.edge.kernel.org/pub/linux/kernel/Historic/old-versions/RELNOTES-0.01)
