Map kernel to higher half

--- a/doc/7.3.Virtual_Memory.md
+++ b/doc/7.3.Virtual_Memory.md
@@ -42,6 +42,12 @@ Just clarifying sizes:
    the 20 most significant bits are used (as least significant bits are used as
    flags). Meaning that addresses must be (4K) page-aligned.
 
+<figure>
+<img src="img/x86_page_translation_process.png"
+     alt="Page translation process">
+<figcaption>Page translation process.</figcaption>
+</figure>
+
 Note how easily can change the whole memory context! For example for different
 processes. That said when modifying translation tables, we need to remove
 obsolete entries from the TLB. This can be done by either:
@@ -81,6 +87,20 @@ entries = frames) * 4096 (page size) = 4 GiB, **how precisely does paging
 provide a wider virtual address space**? Well for one *each process* can
 virtually access 4 GiB. Also the address space can be extended to disk pages,
 aka **swapping**.
+
+It's worth noting that each process will get the kernel mapped to its virtual
+memory space:
+
+> How can we allow multiple programs a 4GB address space if we can only have
+> one page directory at a time?  We cant. Not nativly, anyways. Alot of
+> mutitasking operating systems map the high 2 GB address space for its own use
+> as "kernel space" and the low 2 GB as "user space". The user space cannot
+> touch kernel space. With the kernel address space being mapped to every
+> processes 4GB virtual address space, we can simply switch the current page
+> directory without error using the kernel no matter what process is currently
+> running. This is possible due to the kernel always being located at the same
+> place in the processes address space. This also makes scheduling
+> possible. [^brokenthorn]
 
 Hobby OSes, including linux-0.01 and xv6, map all physical memory for
 simplicity. Xv6 is a bit more precise as it maps more specific chunks from
@@ -131,55 +151,27 @@ memory](https://github.com/josehu07/hux-kernel/blob/d9e210f3f90b030dc2cf2df6a194
 and creates multiple allocator spaces.
 [Xv6](https://github.com/mit-pdos/xv6-public/blob/eeb7b415dbcb12cc362d0783e41c3d1f44066b17/vm.c#L69)
 maps all physical memory to a fixed offset and creates a single frame allocator
-from the end of the kernel to the end of the physical memory.
+from the end of the kernel to the end of the physical memory.  Paging and
+physical memory management do intersect early, when creating the mapping: the
+kernel needs to allocate a frame for each PTE.
+
+### Recursive paging
+
+For completeness, I would like to mention **recursive page table mapping**.
+
+What that enables is avoiding mapping the whole physical memory.
+
+The principle is simply that the last PDE points to the physical page
+directory. By doing so, we can engineer virtual addresses to access basically
+all page tables. This works because tables of all levels have the exact same
+layout on x86 and x86\_64. Good explanations can be found on
+[blog_os](https://os.phil-opp.com/paging-implementation/#recursive-page-tables)
+or [osdev](https://wiki.osdev.org/User:Neon/Recursive_Paging).
 
 ## Implementation
 
 All this is just for reference as we will just focus on enabling paging for
 now: we will follow hux-kernel and identity map all memory.
-
-
-
-## Higher half kernel
-
-FIXME will move to its own chapter.
-
-What are higher half kernels?
-
-> How can we allow multiple programs a 4GB address space if we can only have
-> one page directory at a time?  We cant. Not nativly, anyways. Alot of
-> mutitasking operating systems map the high 2 GB address space for its own use
-> as "kernel space" and the low 2 GB as "user space". The user space cannot
-> touch kernel space. With the kernel address space being mapped to every
-> processes 4GB virtual address space, we can simply switch the current page
-> directory without error using the kernel no matter what process is currently
-> running. This is possible due to the kernel always being located at the same
-> place in the processes address space. This also makes scheduling
-> possible. [^brokenthorn]
-
-Why higher half kernels?
-
-> We can very well run our kernel at some lower virtual address. One reason has
-> to do with v86 tasks [form a "virtual machine" with which to execute an 8086
-> program]. If you want to support v86 tasks, v86 tasks can only run in user
-> mode and within the real mode address limits (0xffff:0xffff), or about
-> 1MB+64k linear address. It is also typical to run user mode programs in the
-> first 2GB (or 3GB on some OSs) as software typically never has a need to
-> access high memory locations. [^brokenthorn]
-
-Another good reason is to avoid collisions: user mode processes are linked by
-default to be loaded into the memory position 0x00000000. But But if the kernel
-is mapped onto there already, user processes need to be linked with a linker
-script to load to a different starting address, which is a very cumbersome
-solution for the users of the operating system. [^littleos]
-
-This is [what hux-kernel
-does](https://github.com/josehu07/hux-kernel/blob/d9e210f3f90b030dc2cf2df6a19484c78c50fed1/Makefile#L39).
-
-To setup a higher half kernel, see:
-
-- https://wiki.osdev.org/Higher_Half_x86_Bare_Bones
-- https://github.com/dreamos82/Osdev-Notes/blob/master/HigherHalf.md
 
 
 ## References
