--- a/doc/7.4.Heap_Allocator.md
+++ b/doc/7.4.Heap_Allocator.md
@@ -105,6 +105,8 @@ early to allow for paging and complete the process later. We thus have to
 revisit our previous approach and replace our previous frame allocator
 implementations (`kheap_curr` and the bitmap frame allocator).
 
+**Note**: the result of the refactoring is captured in the git tag `heap-allocator`.
+
 Related to the previous topic of the relation (or confusion) between page
 mapping and heap allocation, note that the page mapping itself does allocate
 frames for its own use: the page tables. This is not to be confused by the
