--- a/doc/7.3.Virtual_Memory.md
+++ b/doc/7.3.Virtual_Memory.md
@@ -29,7 +29,7 @@ Just clarifying sizes:
 
 - page directory: 4 KB (1024 entries)
 - each page table: 4 KB (also 1024 entries)
-- maximum total: 1024*1024 PTEs + 1 PDE  = 4 MB + 4 KB.
+- maximum total: 1024 PDEs + 1024*1024 PTEs = 4 KB + 4 MB.
 
 2 important notes on the translation:
 
@@ -48,9 +48,9 @@ Just clarifying sizes:
 <figcaption>Page translation process.</figcaption>
 </figure>
 
-Note how easily can change the whole memory context! For example for different
-processes. That said when modifying translation tables, we need to remove
-obsolete entries from the TLB. This can be done by either:
+Note how easily we can change the whole memory context! For example for
+different processes. That said when modifying translation tables, we need to
+remove obsolete entries from the TLB. This can be done by either:
 
 - Issuing the `invlpg` instruction to invalidate a page
 - Reloading the `CR3` register to simulate a complete address space switch
@@ -79,7 +79,7 @@ Identity-mapping the kernel is convenient as we enable pagination: the physical
 addresses before are mapped to linear addresses afterwards.
 
 Identity-mapping the kernel makes address translation for the kernel heap much
-faster [FIXME Really? Why?]
+faster. [FIXME Really? Why?]
 
 Quick question: if physical address space is 2^32 = 4 GiB, and paging deals
 with a virtual space of 1024 (page directory entries) * 1024 (page table
@@ -146,7 +146,7 @@ detailed explanation of each approach.
 Note paging (memory mapping) and physical memory management (frame allocation)
 are two orthogonal concepts. One enables the kernel to access physical memory,
 the other deals with tracking the usage of the physical memory. For example,
-hux-kernel identity [maps all physical
+hux-kernel [identity-maps all physical
 memory](https://github.com/josehu07/hux-kernel/blob/d9e210f3f90b030dc2cf2df6a19484c78c50fed1/src/memory/paging.c#L435)
 and creates multiple allocator spaces.
 [Xv6](https://github.com/mit-pdos/xv6-public/blob/eeb7b415dbcb12cc362d0783e41c3d1f44066b17/vm.c#L69)
@@ -172,6 +172,9 @@ or [osdev](https://wiki.osdev.org/User:Neon/Recursive_Paging).
 
 All this is just for reference as we will just focus on enabling paging for
 now: we will follow hux-kernel and identity map all memory.
+
+We will come back to implementation details and look at mapping examples in the
+[Process Creation](./8.1.Process_Creation.md) chapter.
 
 
 ## References
