--- a/doc/7.4.Heap_Allocator.md
+++ b/doc/7.4.Heap_Allocator.md
@@ -41,7 +41,7 @@ variable-size allocation:
 
 The variable-size allocator is only used in the file system. The fixed-size
 allocator is the one actually used in paging and process management (look for
-salloc_page()).
+`salloc_page()`).
 
 In summary, hux-kernel uses multiple physical allocators, with different memory
 spaces, either at different time or for different purposes.
@@ -72,7 +72,7 @@ struct run {
 };
 ```
 
-Note allocated blocks don't include the header: kalloc() returns a pointer to
+Note allocated blocks don't include the header: `kalloc()` returns a pointer to
 the beginning of the page!
 
 Interestingly, the memory is not allocated in ascending order. The way the
@@ -100,10 +100,10 @@ array) only for paging pages.
 
 ## Implementation
 
-Let's use xv6 approach and implementation. We will initialize the allocator
-early to allow for paging and complete the process later. We thus have to
-revisit our previous approach and replace our previous frame allocator
-implementations (`kheap_curr` and the bitmap frame allocator).
+Let's use xv6 approach and implementation with a single allocator. We will
+initialize the allocator early to allow for paging and complete the process
+later. We thus have to revisit our previous approach and replace our previous
+frame allocator implementations (`kheap_curr` and the bitmap frame allocator).
 
 **Note**: the result of the refactoring is captured in the git tag `heap-allocator`.
 
@@ -114,6 +114,8 @@ creation of the freelist by the heap allocator. I.e. `kinit()` *creates*
 allocatable space, while `mappages()` *consumes* that space for the page
 tables.
 
+The allocator starts at the first page after the end of the kernel (`__k_end`)
+and finishes (`phys_end`).
 
 ## References
 
