Add serial console, ACPI and IOAPIC

--- a/doc/6.3.Handling_Interrupts.md
+++ b/doc/6.3.Handling_Interrupts.md
@@ -106,21 +106,21 @@ The overall setup will look like this:
 
 ```
  CPU               idt.c                   isr.asm                   idt.c
-+--------+        +-------------------+   +------------------+      +-------------------------------+
-|        |        |                   |   |                  |      |                               |
-|  IDTR -----------> idt              |   |  isr_stub_table  |      |                  isr_table    |
-|        |        |                   |   |                  |      |                               |
-|        |        |  idt_entry idt[0] -----> isr_stub_0 --+  |      |              +-> isr_table[0] |
-+--------+        |                   |   |               |  |      |              |                |
-                  |                   |   |               |  |  +---- isr_handler -+                |
-                  |                   |   |               |  |  |   |                               |
-                  |                   |   |  isr_stub_255 |  |  |   |                               |
-                  |                   |   |               |  |  |   |                               |
-                  |                   |   | +-------------+  |  |   |                               |
-                  |                   |   | |                |  |   |                               |
-                  |                   |   | +- isr_wrapper -----+   |                               |
-                  |                   |   |                  |      |                               |
-                  +-------------------+   +------------------+      +-------------------------------+
++--------+        +-------------------+   +------------------+      +--------------------------------+
+|        |        |                   |   |                  |      |                                |
+|  IDTR -----------> idt              |   |  isr_stub_table  |      |                   isr_table    |
+|        |        |                   |   |                  |      |                                |
+|        |        |  idt_entry idt[0] -----> isr_stub_0 --+  |      |               +-> isr_table[0] |
++--------+        |                   |   |               |  |      |               |                |
+                  |                   |   |               |  |  +----> isr_handler -+                |
+                  |                   |   |               |  |  |   |                                |
+                  |                   |   |  isr_stub_255 |  |  |   |                                |
+                  |                   |   |               |  |  |   |                                |
+                  |                   |   | +-------------+  |  |   |                                |
+                  |                   |   | |                |  |   |                                |
+                  |                   |   | +-> isr_wrapper ----+   |                                |
+                  |                   |   |                  |      |                                |
+                  +-------------------+   +------------------+      +--------------------------------+
 ```
 
 Ideally the IDT, which lives in memory, would directly point to the interrupt
